# SolaireEPDA

./: .gitignore  .npmrc.pixi  AGENTS.md  CLA.md  README.en.md  README.md  package-lock.json  package.json  pixi-build-playbook.md  pixi.toml  pyproject.toml  start-web.bat  start-web.ps1  start-web.sh
docs/: desktop-build.md  pixi-packaging-playbook.md
examples/: gaokao.tex
primebrush-rs/: Cargo.toml  README.md
primebrush-rs/crates/primebrush-pyo3/: Cargo.toml
primebrush-rs/crates/primebrush-pyo3/src/: lib.rs
scripts/: build-with-pixi.ps1  build.ps1  dev-desktop.ps1  nuitka-solaire.ps1  prepare-wix-tools.ps1  stage-python-runtime.ps1  verify_release.ps1  verify_release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/runtime/python/: .gitignore  README.txt
src-tauri/runtime/sample_project/.solaire/: list.yaml
src-tauri/runtime/sample_project/analysis/: error_rate_histogram.py
src-tauri/runtime/sample_project/resource/数学/: math.yaml
src-tauri/runtime/sample_project/resource/数学/2024全国高考/: gk2024_015.yaml
src-tauri/runtime/sample_project/templates/: GeneralMath.tex.j2  defaults.yaml  exam-zh-base.metadata_ui.yaml  gaokao2024.yaml  template.yaml
src-tauri/src/: main.rs
tests/: conftest.py  test_agent_bank_format_checks.py  test_agent_context_meter_api.py  test_agent_exam_export.py  test_agent_layer.py  test_agent_llm_settings_api.py  test_agent_plan_and_subagent.py  test_agent_question_metadata_policy.py  test_bank_collection_rename_delete.py  test_bank_exchange.py  test_bank_service_groups.py  test_choice_layout.py  test_choice_type_split.py  test_clean_latex_intermediates.py  test_deepseek_tokenizer.py  test_diagnosis.py  test_diagram_expand.py  test_draft_service.py  test_edu_analysis_api.py  test_edu_analysis_builtins.py  test_edu_analysis_core.py  test_empty_question_library.py  test_exam_docx_export.py  test_exam_export_backup.py  test_exams_create_nested_path.py  test_extension_api.py  test_geometry_ops.py  test_graph_api.py  test_graph_service.py  test_help_api.py  test_latex_metadata_ui.py  test_latexmk_message.py  test_llm_router.py  test_math_fragment_check.py  test_primebrush.py  test_primebrush_expand.py  test_primebrush_preview_api.py  test_questions_api_metadata.py  test_recent_projects_api.py  test_remediation_draft_api.py  (+7 more)
web/: index.html  package.json  (+4 more)
(+471 files in other folders)
